[tool.poetry]
name = "diag-root-cause"
version = "0.1.0"
description = ""
authors = ["yuuk1", "tsurubee"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.21.0"
matplotlib = "^3.4.2"
pandas = "^1.2.5"
pcalg = "^0.2.0"
scipy = "^1.6.3"
scikit-learn = "^0.24.2"
ipython = "^7.25.0"
pygraphviz = "^1.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
