[tool.poetry]
name = "tsdr"
version = "0.1.0"
description = ""
authors = ["tsurubee","yuuk1"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.0"
scipy = "^1.5.2"
fastdtw = "^0.3.4"
sklearn = "^0.0"
pandas = "^1.2.5"
statsmodels = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
